CanopusSummaryWriter: change 'name' to 'id', add TopCSIScore based Summary, small fixes. Closes #218